first init user service
